попрацював над уроками Зробив кнопку update і певний функціонал.

--- a/src/lesson2/index.html
+++ b/src/lesson2/index.html
@@ -9,7 +9,7 @@
 <form name="userForm">
     <label><input type="text" name="name" placeholder="name"></label>
     <label><input type="text" name="age" placeholder="age"></label>
-    <button>save</button>
+    <button id="saveButton">save</button>
 </form>
 <hr>
 <div id="userContainer"></div>
